# Root CMake file

# --- Common ---

CMAKE_MINIMUM_REQUIRED (VERSION 3.0.2 FATAL_ERROR)

IF (NOT ((QTAPI EQUAL 4) OR (QTAPI EQUAL 5)))
	MESSAGE (FATAL_ERROR "Set QTAPI variable with -DQTAPI=4|5 !")
ENDIF ()

# TODO(DZhon): parse from repo
SET (WW_VERSION 1.0.0)
SET (CMP0048 NEW)

PROJECT (wwwidget-sln${QTAPI} VERSION ${WW_VERSION} LANGUAGES CXX)

# --- Options ---

#OPTION (ENABLE_TESTS "Build tests" TRUE)
OPTION (ENABLE_EXAMPLES "Build examples" TRUE)
OPTION (ENABLE_DESIGNER_PLUGIN "Build designer plugin" TRUE)

MESSAGE (STATUS "Building wwwidgets for Qt" ${QTAPI})
MESSAGE (STATUS "wwwidgets version: " ${WW_VERSION})
MESSAGE (STATUS "Examples: " ${ENABLE_EXAMPLES})
MESSAGE (STATUS "Designer: " ${ENABLE_DESIGNER_PLUGIN})

INCLUDE_DIRECTORIES (${PROJECT_BINARY_DIR})
SET (TOP_BIN_DIR ${PROJECT_BINARY_DIR})

# --- Qt ---

SET (RCCS images/wwwidgets.qrc)

IF (ENABLE_DESIGNER_PLUGIN)
	SET (QT_USE_QTDESIGNER TRUE)
ENDIF (ENABLE_DESIGNER_PLUGIN)

SET (CMAKE_AUTOMOC TRUE)

IF (QTAPI EQUAL 4)
	FIND_PACKAGE (Qt4 REQUIRED)
	INCLUDE (${QT_USE_FILE})

	ADD_DEFINITIONS (${QT_DEFINITIONS})
	INCLUDE_DIRECTORIES (${QT_INCLUDE_DIR})
	
	qt4_add_resources (QRC_SOURCES ${RCCS})
ELSEIF (QTAPI EQUAL 5)
	SET (CMAKE_PREFIX_PATH ${QTDIR})
	FIND_PACKAGE (Qt5Widgets REQUIRED)
	SET (QT_LIBRARIES ${QT_LIBRARIES} Qt5::Widgets)
	IF (ENABLE_DESIGNER_PLUGIN)
		FIND_PACKAGE (Qt5Designer REQUIRED)
		SET (QT_LIBRARIES ${QT_LIBRARIES} Qt5::Designer)
	ENDIF (ENABLE_DESIGNER_PLUGIN)

	qt5_add_resources (QRC_SOURCES ${RCCS})
ENDIF (QTAPI EQUAL 4)


# --- Projects ---

ADD_SUBDIRECTORY (widgets)

IF (ENABLE_EXAMPLES)
	ADD_SUBDIRECTORY (examples)
ENDIF (ENABLE_EXAMPLES)

IF (ENABLE_DESIGNER_PLUGIN)
	ADD_SUBDIRECTORY (plugin)
ENDIF (ENABLE_DESIGNER_PLUGIN)
